# ShareLaTeX-Versioning

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  AUTHORS.rst  CHANGELOG.md  LICENSE.txt  Makefile  Pipfile  README.md  README.rst  cliff.toml  licenseheaders.toml  licenserc.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test.yml
docs/: Makefile  conf.py  index.rst
rsc/: config.schema.json
sharelatex_versioning/: __init__.py  main.py  password_handling.py
sharelatex_versioning/classes/: __init__.py  cache.py  configuration.py
sharelatex_versioning/logic/: __init__.py  download_zip.py  hash_file.py
sharelatex_versioning/tests/: test_zip_hash.py
sharelatex_versioning/utils/: __init__.py  password_handling.py
src/sharelatex_versioning/: __init__.py  configuration.py  download_zip.py  main.py  skeleton.py
src/sharelatex_versioning/classes/: configuration.py
src/sharelatex_versioning/logic/: download_zip.py  hash_file.py
src/sharelatex_versioning/tests/: conftest.py  test_skeleton.py  test_zip_hash.py
tests/: __init__.py  test_zip_hash.py
tests/rsc/: __init__.py
